# arkad-demo

./: .gitignore  README.md
arkad-agent-demo/: .envexample  README.md
arkad-agent-demo/db/: db_fetcher.py  macro_metrics.json  scheduler.py
arkad-agent-demo/db/stocks/sec_forms/: cik_fetcher.py
arkad-agent-demo/sql-market-agent/sql_market_agent/agent/parsers/: parser.py
arkad-agent-demo/sql-market-agent/sql_market_agent/agent/tools/: company_overview_tools.py  datetime_tools.py  sql_tools.py
arkad-agent-demo/sql-market-agent/sql_market_agent/agent/tools/prompts/: prompts.py  sql_prompts.py
arkad-agent-demo/sql-market-agent/sql_market_agent/agent/tools/storage/: db_fetcher.py  init_postgres_db.sql
arkad-agent-demo/sql-market-agent/sql_market_agent/agent/tools/storage/fred/: fred_processor.py
arkad-agent-demo/sql-market-agent/sql_market_agent/agent/tools/storage/stocks/candles/: candles_processor.py
arkad-agent-demo/sql-market-agent/sql_market_agent/agent/tools/storage/stocks/sec_forms/: tickers_cik_info.json
arkad-agent-demo/streamlit_app/: supervisord.conf
arkad-agent-demo/streamlit_front/: app.py  find_http_process.sh  run_server.sh
arkad-agent-demo/streamlit_front/artifacts/: trades.csv
arkad-agent/arkad-agent-core/: pyproject.toml
arkad-pandas-demo/: README.md
arkad-pandas-demo/notebooks/: pyproject.toml  test_pandas_market_agent.ipynb
arkad-pandas-demo/pandas-market-agent/: pyproject.toml
arkad-pandas-demo/pandas-market-agent/pandas_market_agent/agent/: agent.py
arkad-pandas-demo/pandas-market-agent/pandas_market_agent/agent/tools/: pandas_tools.py  tools.py
arkad-pandas-demo/pandas-market-agent/pandas_market_agent/agent/tools/prompts/: pandas_prompts.py
arkad-pandas-demo/pandas-market-agent/pandas_market_agent/agent/tools/storage/: data_fetcher.py  stocks.json
arkad-pandas-demo/streamlit_front/: app.py  pyproject.toml
arkad-sql-demo/: .envexample  README.md  docker-compose.yml  run.sh
arkad-sql-demo/db/: Dockerfile  db_fetcher.py  init_demo_db.sql  init_postgres_db.sql  pyproject.toml  scheduler.py  stocks.json
arkad-sql-demo/fundamentals/: CPIAUCSL_data.csv  DGS10_data.csv  DGS2_data.csv  UNRATE_data.csv  checker.py  cik_fetcher.py  forms_fetcher.py  macro.py  nvda_facts.json  nvda_numbers.csv  pyproject.toml
arkad-sql-demo/fundamentals/forms_data/: ADSK_facts.json  AMD_facts.json  ARRY_facts.json  ASML_facts.json  BP_facts.json  COP_facts.json  CVX_facts.json  ENPH_facts.json  FSLR_facts.json  INTC_facts.json  JKS_facts.json  MAXN_facts.json  MRO_facts.json  MU_facts.json  NOVA_facts.json  NVDA_facts.json  PXD_facts.json  QCOM_facts.json  SEDG_facts.json  SLB_facts.json  SOL_facts.json  SPWR_facts.json  TSM_facts.json  TXN_facts.json  XOM_facts.json
arkad-sql-demo/notebooks/: pyproject.toml  test_sql_market_agent.ipynb
arkad-sql-demo/notebooks/charts/: xom_close_prices_last_3_days.html
arkad-sql-demo/sql-market-agent/: pyproject.toml
arkad-sql-demo/sql-market-agent/sql_market_agent/agent/: agent.py
arkad-sql-demo/sql-market-agent/sql_market_agent/agent/tools/: alpha_vantage_tools.py  sql_tools.py  tools.py
arkad-sql-demo/sql-market-agent/sql_market_agent/agent/tools/prompts/: prompts.py  sql_prompts.py
arkad-sql-demo/sql-market-agent/sql_market_agent/agent/tools/storage/: StockData.db  db_fetcher.py  disc_fetcher.py  init_demo_db.sql  init_sqlite_db.sql  macro_metrics.json
arkad-sql-demo/sql-market-agent/sql_market_agent/agent/tools/storage/stocks/sec_forms/: xbrl_processor.py
arkad-sql-demo/streamlit_app/: Dockerfile  app.py  pyproject.toml
arkad-sql-demo/streamlit_front/: app.py  pyproject.toml  run_server.sh
arkad-sql-demo/streamlit_front/artifacts/: temp.csv
arkad-sql-demo/test/: test_db_connection.sh
