[tool.poetry]
name = "arkad-agent-core"
version = "0.1.0"
description = ""
authors = ["Oleh <oleg.davydiuk1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.0.38"
langchain = "^0.1.0"
langchainhub = "^0.1.14"
langchain-openai = "^0.1.2"
langchain-anthropic = "^0.1.8"
langchain-experimental = "^0.0.57"
pandas = "^2.2.2"
yfinance = "^0.2.38"
e2b = "^0.14.14"
psycopg2-binary = "^2.9.9"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
